# MythOuro-

./: .gitignore  CHANGES.md  LICENSE  README.md  example.py  inspect_checkpoint.py  launch_training.py  pyproject.toml  requirements.txt  run_ab_confirm.sh  run_harvest_v2.sh  run_onpolicy_fixed.sh  stop_gpu_jobs.sh  train_tiny_mythos.py  try_mythos.py
checkpoints_ablation_dense_s0/: distill_step_0001000.json  distill_step_0002000.json  distill_step_0003000.json  distill_step_0004000.json
checkpoints_ablation_dense_s1/: distill_step_0002000.json  distill_step_0004000.json
checkpoints_ablation_moe_s0/: distill_step_0001000.json  distill_step_0002000.json  distill_step_0003000.json  distill_step_0004000.json
checkpoints_ablation_moe_s1/: distill_step_0001000.json  distill_step_0002000.json  distill_step_0003000.json  distill_step_0004000.json
checkpoints_cont_sft/: sft_step_0001000.json  sft_step_0002000.json  sft_step_0003000.json
checkpoints_revkl_stable/: eval_step_6675.json
checkpoints_v6_clean_sft/: sft_step_0001000.json  sft_step_0002000.json  sft_step_0003000.json
data/: __init__.py  __main__.py  contamination.py  dedup.py  tokenizer_eval.py
docs/: clean_sft_datasets.md  dataset_selection.md  datasets.md  decode_kernel_optimization.md  deployment.md  failure_modes.md  fork_vs_openmythos.md  generation_probe_tracker.md  glossary.md  growth_design.md  hardware_options.md  harvest_speedup_plan.md  ideas.md  looped_lm_landscape.md  max1100_field_notes.md  moe_vs_dense_ablation.md  mythouro.md  mythouro_code_review_findings.md  onpolicy_plan.md  parallel_loops.md  references.md  review_action_plan.md  roadmap.md  teacher_corpus_plan.md  teacher_data_curriculum.md  training_commands.md  training_runs.md
eval/: __init__.py  harness.py  metrics.py
eval_results/: distill_step_0000200.json  distill_step_0001000.json  distill_step_0002000.json  distill_step_0003000.json  distill_step_0004000.json  distill_step_0005000.json  distill_step_0006000.json  distill_step_0007000.json  distill_step_0008000.json  sft_step_0003000.json  sft_step_0004000.json  sft_step_0006000.json
examples/: moda_example.py  variants_example.py
mythouro/: __init__.py  checkpointing.py  device.py  grow.py  inference.py  main.py  rollout.py  sft_data.py  tokenizer.py  training_utils.py  variants.py
reports/: collapse_freshjsd_4000_full.txt  collapse_freshjsd_4000_full_T08.txt  collapse_freshrevkl_1500.txt  collapse_freshrevkl_1500_T08.txt  collapse_freshrevkl_3000.txt  collapse_freshrevkl_3000_T08.txt  collapse_freshrevkl_3000_full.txt  collapse_freshrevkl_3000_full_T08.txt  collapse_freshrevkl_3000_qa.txt  collapse_freshrevkl_3000_qa_T08.txt  collapse_freshrevkl_5500_full.txt  collapse_freshrevkl_5500_full_T08.txt  collapse_onpolicy_xpu_9881_greedy_cuda5070.txt  collapse_onpolicy_xpu_9881_greedy_xpu.txt  collapse_revkl_10k.txt  collapse_revkl_stable_4000_full.txt  collapse_revkl_stable_4000_full_T08.txt  collapse_revkl_stable_6675_full.txt  collapse_revkl_stable_6675_full_T08.txt  cont_error.txt  gpu_smoke_50step.txt  gpu_smoke_distill_dense.txt  gpu_smoke_distill_moe.txt  inspect_6kSFT.txt  inspect_chat_sft.txt  inspect_cont8000.txt  inspect_cont_sft.txt  inspect_cont_sft_gpu.txt  inspect_distill_base.txt  inspect_grown_base.txt  inspect_grown_v4.txt  inspect_moe_s0.txt  inspect_noise_distill_11k.txt  inspect_noise_sft.txt  inspect_small_sft_gpu.txt  inspect_v4.txt  inspect_v4_compare.txt  inspect_v4_forced.txt  inspect_v4_forced_n8_greedy.txt  inspect_v5.txt  (+22 more)
tests/: bench_vs_transformer.py  small_benchmark.py  test_attention_fallback.py  test_bench_step.py  test_checkpoint.py  test_component_warmup.py  test_data.py  test_dense_ablation.py  test_depth_regulariser.py  test_device_rope.py  test_distillation.py  test_grow.py  test_inference.py  test_main.py  test_prealloc_cache.py  test_review_fixes.py  test_rollout_cache.py  (+5 more)
(+30 files in other folders)
